# idto

examples/: example_base.cc  example_base.h  mpc_controller.cc  mpc_controller.h
examples/dual_jaco/: BUILD.bazel  dual_jaco.cc  dual_jaco_lifting.yaml
examples/dual_jaco_large_box/: BUILD.bazel  dual_jaco_large_box.cc  dual_jaco_large_box.yaml
examples/dual_jaco_punyo/: BUILD.bazel  dual_jaco_punyo.cc  dual_jaco_punyo.yaml
examples/jaco/: BUILD.bazel  jaco.cc  jaco.yaml
examples/models/: box_intel_nuc.sdf  box_intel_nuc_hydro.sdf  box_with_lid_large.sdf  j2s7s300_arm_without_nub_hydro_collision.sdf  j2s7s300_arm_without_nub_sphere_collision_v2.sdf  jaco_bubble_picoflexx_paw_hydro.sdf  jaco_bubble_picoflexx_paw_hydro_sphere_collision.sdf  rolled_yoga_mat_gaiam.sdf  rolled_yoga_mat_gaiam_sphere.sdf  symphony_table.sdf
idto/traj_opt/: trajectory_optimizer.cc
idto/traj_opt/examples/: example_base.cc  example_base.h  yaml_config.h
idto/traj_opt/examples/models/: box_15cm.sdf
optimizer/: trajectory_optimizer.cc  trajectory_optimizer.h
